[package]
name = "webgl-gui-demo"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.60"
fnv = "1.0.6"
console_error_panic_hook = "0.1.6"
log = "0.4.8"
console_log = "0.1.2"
cgmath = { git = "https://github.com/rustgd/cgmath", features = ["serde"] }
webgl-wrapper = { git = "https://github.com/nstoddard/webgl-wrapper" }
webgl-gui = { git = "https://github.com/nstoddard/webgl-gui" }
wasm-bindgen-futures = "0.4.10"

[dependencies.web-sys]
version = "0.3.37"
features = [
  "Window",
]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
